Fixed mobile menu spacings

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -29,6 +29,7 @@
   align-items: center;
   margin-left: auto;
 }
+
 .header__btn {
   @extend .button--accented;
   @extend %flex-centered;
@@ -37,17 +38,6 @@
     @media screen and (max-width: $tablet) {
       display: none;
     }
-  }
-}
-
-// Mobile menu button
-
-.header__btn--mobile {
-  padding: calc(12px - 1px) 36px;
-  align-self: center;
-
-  @media screen and (min-width: $tablet) {
-    display: none;
   }
 }
 
@@ -75,120 +65,4 @@
 .nav__link {
   padding-top: 13px;
   padding-bottom: 13px;
-}
-
-// Mobile menu
-
-.menu-toggle {
-  position: relative;
-  @extend %flex-centered;
-
-  height: 32px;
-  width: 32px;
-
-  margin-right: 0px;
-  // margin-left: auto;
-  border: none;
-
-  background-color: transparent;
-  fill: #ffffff;
-
-  @media screen and (min-width: $tablet) {
-    margin-right: 32px;
-  }
-  @media screen and (min-width: $desktop) {
-    display: none;
-  }
-}
-
-.menu-toggle:hover,
-.menu-toggle:focus {
-  transform: transition;
-}
-.menu {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-@media (max-width: calc($tablet - 1px)) {
-  .menu {
-    display: none;
-  }
-}
-
-.menu .link {
-  padding: 10px;
-  color: inherit;
-  text-decoration: none;
-}
-
-.menu .link:hover,
-.menu .link:focus {
-  text-decoration: underline;
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  display: flex;
-  flex-direction: column;
-
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background-color: $bg-primary-darker;
-  z-index: 999;
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-  @media screen and (min-width: $desktop) {
-    display: none;
-  }
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 50px;
-  right: 25px;
-  color: rgb(25, 23, 23);
-  background-color: transparent;
-  border: none;
-}
-
-.mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-
-  margin-bottom: auto;
-}
-
-.mobile-menu .link {
-  display: block;
-  padding-bottom: 32px;
-  color: $text-light;
-  text-decoration: none;
-
-  font-style: normal;
-  font-weight: 700;
-  @include fz-lh(32, 59);
-
-  align-items: center;
-  text-align: center;
-  @media screen and (min-width: $tablet) {
-    font-size: rem(48);
-    padding-bottom: 40px;
-  }
-}
-
-.mobile-menu-item.active a {
-  color: $text-dark;
 }
