--- a/src/sass/layout/modals/_modal.scss
+++ b/src/sass/layout/modals/_modal.scss
@@ -16,8 +16,6 @@
   visibility: hidden;
 
   @include transition(opacity);
-
-  cursor: not-allowed;
 }
 
 .modal {
